Bug 130621 - FILESAVE XLSX Chart Data label placement settings changed after spreadsheet reload
Summary: FILESAVE XLSX Chart Data label placement settings changed after spreadsheet r...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Chart (show other bugs)
Version:
(earliest affected)
6.2.5.2 release
Hardware: All All
: medium normal
Assignee: Balázs Varga
URL:
Whiteboard: target:7.0.0
Keywords: filter:xlsx
Depends on:
Blocks: OOXML-Chart
  Show dependency treegraph
 
Reported: 2020-02-12 14:51 UTC by NISZ LibreOffice Team
Modified: 2020-02-27 13:46 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot of the problem in Calc. (166.20 KB, image/jpeg)
2020-02-12 14:52 UTC, NISZ LibreOffice Team
Details
Example file from Calc. (7.28 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2020-02-12 14:52 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2020-02-12 14:51:44 UTC
Description:
Chart Data label placement setting changed from Above to Right after spreadsheet was created with LibreOffice Calc 7.0.0.0.alpha0+ and saved as XLSX.

Steps to Reproduce:
1. Create a line chart type with points and lines in Calc.
2. Insert data labels with default (Placement Above) settings.
3. Save the file as XLSX.
4. Reload or reopen the file.

Actual Results:
Chart Data labels placement setting changed from Above to Right after the spreadsheet reloaded.

Expected Results:
Chart Data label placement setting should remain the same after reloading.


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.0.0.0.alpha0+ (x64)
Build ID: 121fb94b7857c8bcba27c9715374328e965bece2
CPU threads: 4; OS: Windows 10.0 Build 17134; UI render: GL; VCL: win; 
Locale: hu-HU (hu_HU); UI-Language: en-US
Calc: CL
Comment 1 NISZ LibreOffice Team 2020-02-12 14:52:23 UTC
Created attachment 157820 [details]
Screenshot of the problem in Calc.
Comment 2 NISZ LibreOffice Team 2020-02-12 14:52:50 UTC
Created attachment 157821 [details]
Example file from Calc.
Comment 3 Balázs Varga 2020-02-12 15:04:57 UTC
Confirmed in:

Version: 6.2.5.2 (x64)
Build ID: 1ec314fa52f458adc18c4f025c545a4e8b22c159
CPU threads: 4; OS: Windows 10.0; UI render: default; VCL: win; 
Locale: en-US (hu_HU); UI-Language: en-US
Calc:
Comment 4 Commit Notification 2020-02-27 13:45:22 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/b5fa0fb35c362492a136ec56746e062bc800d7e7

tdf#130621 OOXML chart export: fix lost label placement

It will be available in 7.0.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.