tdf#130621 Chart: fix first set label placement

Do not use the default "LabelPlacement" as an 'nOld' value,
if we do not have a "LabelPlacement" value, because the first
set of the label placement will not be set.

Change-Id: I27bb57a0ebb3a2b3132cf47c0ea3a92ac2806380